--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -4,11 +4,7 @@
         <div class="component_navbar">
             <div class="component-navbar__wrapper">
                 <div
-                    class="
-                        sidebar-block__top
-                        component-navbar component-navbar__navbar-public
-                        editor__component-wrapper
-                    "
+                    class="sidebar-block__top component-navbar component-navbar__navbar-public editor__component-wrapper"
                 >
                     <div class="container">
                         <nav class="navbar navbar-expand-lg navbar-light">
@@ -16,7 +12,7 @@
                                 <div class="component-navbar-logo">
                                     <a href="{% url 'home' %}">
                                         <img
-                                            src="{% static 'images/logopromotionamro.jpeg' %}"
+                                            src="{% static 'images/logobest.jpeg' %}"
                                             class="sidebar-block__top-logo"
                                             alt=""
                                             title=""
@@ -42,58 +38,29 @@
                                 id="navbar-collapse-35"
                             >
                                 <div
-                                    class="
-                                        d-flex
-                                        flex-wrap
-                                        component-navbar-collapse
-                                    "
+                                    class="d-flex flex-wrap component-navbar-collapse"
                                 >
                                     <ul class="navbar-nav">
                                         <li
-                                            class="
-                                                nav-item
-                                                component-navbar-nav-item
-                                                component_navbar
-                                                component-navbar-public-nav-item
-                                            "
+                                            class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
                                         >
                                             <a
-                                                class="
-                                                    component-navbar-nav-link
-                                                    component-navbar-nav-link__navbar-public
-                                                    component-navbar-nav-link-active__navbar-public
-                                                "
+                                                class="component-navbar-nav-link component-navbar-nav-link__navbar-public component-navbar-nav-link-active__navbar-public"
                                                 href="{% url 'login' %}"
                                                 ><i
-                                                    class="
-                                                        navbar-icon
-                                                        fad
-                                                        fa-user
-                                                    "
+                                                    class="navbar-icon fad fa-user"
                                                 ></i>
                                                 Sign in</a
                                             >
                                         </li>
                                         <li
-                                            class="
-                                                nav-item
-                                                component-navbar-nav-item
-                                                component_navbar
-                                                component-navbar-public-nav-item
-                                            "
+                                            class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
                                         >
                                             <a
-                                                class="
-                                                    component-navbar-nav-link
-                                                    component-navbar-nav-link__navbar-public
-                                                "
+                                                class="component-navbar-nav-link component-navbar-nav-link__navbar-public"
                                                 href="{% url 'services' %}"
                                                 ><i
-                                                    class="
-                                                        navbar-icon
-                                                        fas
-                                                        fa-bars
-                                                    "
+                                                    class="navbar-icon fas fa-bars"
                                                 ></i>
                                                 Services</a
                                             >
@@ -123,74 +90,38 @@
                                             >
                                         </li> -->
                                         <li
-                                            class="
-                                                nav-item
-                                                component-navbar-nav-item
-                                                component_navbar
-                                                component-navbar-public-nav-item
-                                            "
+                                            class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
                                         >
                                             <a
-                                                class="
-                                                    component-navbar-nav-link
-                                                    component-navbar-nav-link__navbar-public
-                                                "
+                                                class="component-navbar-nav-link component-navbar-nav-link__navbar-public"
                                                 href="{% url 'register' %}"
                                                 ><i
-                                                    class="
-                                                        navbar-icon
-                                                        fas
-                                                        fa-user-friends
-                                                    "
+                                                    class="navbar-icon fas fa-user-friends"
                                                 ></i>
                                                 Sign up</a
                                             >
                                         </li>
                                         <li
-                                            class="
-                                                nav-item
-                                                component-navbar-nav-item
-                                                component_navbar
-                                                component-navbar-public-nav-item
-                                            "
+                                            class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
                                         >
-                                        <!-- href="/start-your-own-buisness" -->
+                                            <!-- href="/start-your-own-buisness" -->
                                             <a
-                                                class="
-                                                    component-navbar-nav-link
-                                                    component-navbar-nav-link__navbar-public
-                                                "
+                                                class="component-navbar-nav-link component-navbar-nav-link__navbar-public"
                                                 href="{% url 'terms_page' %}"
                                                 ><i
-                                                    class="
-                                                        navbar-icon
-                                                        fad
-                                                        fa-book
-                                                    "
+                                                    class="navbar-icon fad fa-book"
                                                 ></i>
                                                 Terms</a
                                             >
                                         </li>
                                         <li
-                                            class="
-                                                nav-item
-                                                component-navbar-nav-item
-                                                component_navbar
-                                                component-navbar-public-nav-item
-                                            "
+                                            class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
                                         >
                                             <a
-                                                class="
-                                                    component-navbar-nav-link
-                                                    component-navbar-nav-link__navbar-public
-                                                "
+                                                class="component-navbar-nav-link component-navbar-nav-link__navbar-public"
                                                 href="{% url 'about' %}"
                                                 ><i
-                                                    class="
-                                                        navbar-icon
-                                                        fas
-                                                        fa-comment-exclamation
-                                                    "
+                                                    class="navbar-icon fas fa-comment-exclamation"
                                                 ></i>
                                                 About</a
                                             >
