--- a/dashboard/templates/dashboard.html
+++ b/dashboard/templates/dashboard.html
@@ -240,7 +240,7 @@
                                         >
                                             <a
                                                 class="component-navbar-nav-link component-navbar-nav-link__navbar-private"
-                                                href="/logout"
+                                                href="{% url 'logout' %}"
                                                 >Logout</a
                                             >
                                         </li>
