--- a/templates/base.html
+++ b/templates/base.html
@@ -67,6 +67,14 @@
         <script type="text/javascript" src="/static/js/file3.js"></script>
     </body>
     <style>
+        body {
+            background-color: #120b2f;
+        }
+        @media (max-width: 991px) {
+            .wrapper-sidebar-navbar {
+                flex-direction: column;
+            }
+        }
         .form-control {
             background-color: #e4e1ee;
             border-color: #000000;
