--- a/templates/components/header.html
+++ b/templates/components/header.html
@@ -41,6 +41,7 @@
                                     class="d-flex flex-wrap component-navbar-collapse"
                                 >
                                     <ul class="navbar-nav">
+                                        {% if not request.user.is_authenticated %}
                                         <li
                                             class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
                                         >
@@ -53,6 +54,7 @@
                                                 Sign in</a
                                             >
                                         </li>
+                                        {% endif %}
                                         <li
                                             class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
                                         >
@@ -89,6 +91,8 @@
                                                 API</a
                                             >
                                         </li> -->
+                                        {% if not request.user.is_authenticated %}
+
                                         <li
                                             class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
                                         >
@@ -101,6 +105,7 @@
                                                 Sign up</a
                                             >
                                         </li>
+                                        {% endif %}
                                         <li
                                             class="nav-item component-navbar-nav-item component_navbar component-navbar-public-nav-item"
                                         >
